components/carte-etat/bar-chart.scss
:global {
    
  .divTitre {
    display: inline-block;
    padding-left: 3px
  }
  .chart-wrapper {
    height: 210px;
    display: flex;
    width: 100%;
  }
  .chart {
    height: 210px;
    width: 100%;
  }
  .main-chart{
    flex: 3,
  }
  .title-wrapper{
    display: flex;
  }
  .montant-impots{
    padding: 0px;
  }

  .nobreak {
    overflow: hidden;
  }

  .styleExpansionPanel {
    margin: 0px;
    overflow-x:scroll;
  }

}

